# Tiny-ONN

./: .clinerules  .gitignore  .gitmodules  01_download_model.py  1.7B_model_modules.txt  DFS-sampler.md  PI_Pruned_Inference.py  README.md  gemini.md  main.py  notes-2.md  pyproject.toml  replay_analysis.py  submission_notebook.ipynb  temp_code.txt  tiny_onn_pruned_metrics.db  train.py  train_e2e.py
.clinerules/: main.md  mscan-standard.md  note.md  phase-1.md  phase-2.md  pytorch-ref.md  tiny-onn-development-notes.md  transformers-ref.md
.roo/rules/: 0-background.md  0-main.md  0-path.md  0-reference-index.md  1-background.md  1-glossary.md  2025-08-27_ARC_Architecture_Workshop_Minutes.md  ARC-2-Framework-Design.md  ARC-2-Standard.md  ARC-AGI-2-Analysis.md  ARC-Theory.md  ARS-Series.md  BCPT.md  BN-SBL.md  DFC-Theory-Addendum.md  DFC-Theory.md  DRDS.md  DynNSIHA.md  DynSIHA-Plus.md  DynSIHA-Theory-v2.md  DynSIHA-Theory.md  F3EO-L-meta-candidates.md  F3EO.md  FARS-Consistency.md  FARS-Idea.md  FARS.md  MoIE.md  Neuron_as_Markov_blanket.md  PISD-research-report.md  PISD.md  PLSD.md  RDS-ACT.md  RMSuon.md  SAPS.md  SIA.md  SPL.md  Tiny-ONN-ARC-Engineer.md  Tiny-ONN-ARC-Theory.md  Tiny-ONN-ARC.md  Tiny-ONN-LLM.md  (+30 more)
archive/: SARS.md  capr.py  cpr.py  routing_tutorial.py
archive/dynsiha_flat/: model_v0_all.py  model_v0_smha.py  model_v1.py
common/models/: func_pruned_layers.py  pruned_layers.py
config/: __init__.py
configs/: E2E_test_train.yaml  dummy_test_config.yaml  meta_train_v1.yaml  meta_train_v1_conservative.yaml  test_distillation.yaml
data/: dummy_chat_data.jsonl
data/metadata/: param_name_map.json
data/scans/: Qwen--Qwen3-1.7B_20250712_083017.mscan  Qwen--Qwen3-1.7B_20250712_104210.mscan  Qwen--Qwen3-1.7B_20250712_110556.mscan  Qwen--Qwen3-1.7B_20250714_091836.mscan
data/sft/: arithmetic_corpus.jsonl  test_corpus.jsonl
docs/: ARC-Prize-2025-Rules.md  Tiny-ONN-LLM.md  publishing_strategy.md  spl_as_vae.md  theory-meeting-transcript.md  torch.sparse — PyTorch 2.8 documentation.md
docs/FARS/: direction_1.md  direction_2.md
docs/Tiny-ONN-Omni/: Tiny-ONN-LLM.md  Tiny-ONN-in-Transformers.md  architectural-philosophy.md  observability.md  technical-spiking.md
exp/: Dense_PoC.py  MoIE_PoC.py  SML_DynMoE_PoC.py  ablation_fars_vs_baseline.py  act_comparison.py  act_comparison_discrete.py  act_fars_consistency_study.py  analyze_arc_data.py  analyze_arc_entropy.py  analyze_mini_fars_complexity.py  arc_depth_scaling.py  arc_mini_fars.py  arc_mini_fars_stats.md  arc_rds_detached_gradient.py  arc_rds_plsd_test.py  arc_scaling_fars.py  autograd_poc.py  diag_gn_equivalence_test.py  dyn_nsa_poc.py  eavi_checkpoint_poc.py  eavi_graph_poc.py  fars_logic_test.py  final_grad_poc.py  final_poc_for_real.py  generate_sample.py  get_config.py  grad_capture_poc.py  grad_disaggregation_poc.py  grad_poc_bayesian.py  gradient_fusion_poc.py  heuristic_nsa_poc.py  hooks_integration_poc.py  interactive_chat.py  kl_surprise_poc.py  kv_moe_poc.py  mini_arc_fars_v3.py  mnist_fds_fars.py  moie_benchmark.py  pi_weighted_self_distillation_spike.py  sbtb_final_poc.py  (+13 more)
inference/: __init__.py  backward_pass.py  block_level_capture.py  forward_pass.py
models/: pruned_layers.py
notebook/: convert_checkpoint.py  debug_sampler.py  train_kaggle.ipynb  train_kaggle.py
plans/: tiny_onn_arc_blueprint.md
pruner/: gsm8k_evaluate.py  prune.py
ref/: FARS.md  da_fr_sampler.py  modular_qwen2_5_vl_circle_rope.py  torch.sparse — PyTorch 2.8 documentation.md
scanner/: app.py  batch.py  io.py  mscan.py
scripts/: PI_Pruning.py  analyze_lengths_simple.py  build_kaggle_script.py  calculate_params.py  evaluate_baseline.py  evaluate_gsm8k.py  fMRI.py  inspect_safetensors.py  migrate_db.py  parse_tblogs.py  perform_surgery.py  simple_generation_benchmark.py  temp_count_large_arc.py  test_observer.py
src/: train.py
tests/: conftest.py  debug_grad_flow.py  test_autograd_surprise.py  test_callbacks.py  test_data_pipeline.py  test_distillation.py  test_dynmoe.py  test_e2e_meta_learning.py  test_full_training_pipeline.py  test_models.py  test_observer.py  test_pi_weighted_self_distillation_spike.py  test_surgery.py  test_surgery_grad.py
tiny_onn/: __init__.py  config.py  model.py  modular.py  surgery.py
tinyonn/: configuration_tinyonn.py  layer.py  model.py  moe.py
training/: autograd.py  callbacks.py  config.py  data.py  dataset.py  engine.py  expert_manager.py  hooks.py  logger.py  losses.py  observer.py  plotter.py  utils.py
ui/: gradio_ui.py
utils/: __init__.py  data_quantization.py  logging_utils.py  normalization.py  plotting.py
(+231 files in other folders)
