[project]
name = "tiny-onn"
version = "0.1.0"
authors = [{ name = "Rui.Lin", email = "Lin.Rui.ipwt@proton.me" }]
description = ""
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "accelerate>=1.8.1",
  "bayesian-torch>=0.5.0",
  "bitsandbytes>=0.46.1",
  "datasets>=3.6.0",
  "einops>=0.8.1",
  "gradio>=5.35.0",
  "local-attention>=1.11.2",
  "matplotlib",
  "native-sparse-attention-pytorch>=0.2.3",
  "pillow>=11.3.0",
  "pytest>=8.4.1",
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "scikit-learn>=1.7.0",
  "scipy>=1.16.0",
  "seaborn>=0.13.2",
  "tensorboard>=2.14.0",
  "tokenizers>=0.21.2",
  "torch>=2.7.1",
  "tqdm>=4.67.1",
  "transformers>=4.53.1",
  "umap-learn>=0.5.9.post2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["ref", "exp", ".venv"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tiny_onn*", "training*", "scripts*"]

[project.urls]
"Homepage" = "https://github.com/dmf-archive/Tiny-ONN"
"Bug Tracker" = "https://github.com/dmf-archive/Tiny-ONN/issues"

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "ruff",
  "torch==2.7.1+cu128",
  "torchvision",
  "torchaudio",
  "types-pyyaml>=6.0.12.20250516",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["ref"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
exclude = ["ref", "exp", ".venv"]

[tool.ruff.lint]
select = ["W", "F", "I", "UP", "B", "NPY", "SIM", "ISC", "TID"]
